# CS220-dmfb-synthesis-skeleton

./: .gitignore  CMakeLists.txt  LICENSE  README.md  generate_all_graphs.command  generate_video.command
Assays/CFGs/BroadSpectrumOpiate/: BroadSpectrumOpiate.cfg  BroadSpectrumOpiate_DAG0.dag
Assays/CFGs/CancerDetection/: CancerDetection.cfg  CancerDetection_DAG1.dag
Assays/CFGs/CancerDetection/ArchFile/: arch.txt
Assays/CFGs/CiprofloxacinELISA/: CiprofloxacinELISA.cfg  CiprofloxacinELISA_DAG0.dag  CiprofloxacinELISA_DAG11.dag
Assays/CFGs/CoalescingMotivation/: CoalescingMotivation.cfg  CoalescingMotivation_DAG1.dag  CoalescingMotivation_DAG11.dag  CoalescingMotivation_DAG9.dag
Assays/CFGs/CoalescingMotivation/ArchFile/: arch.txt
Assays/CFGs/DiazepamELISA/: DiazepamELISA.cfg  DiazepamELISA_DAG0.dag  DiazepamELISA_DAG11.dag  DiazepamELISA_DAG16.dag  DiazepamELISA_DAG20.dag  DiazepamELISA_DAG7.dag
Assays/CFGs/DiazepamELISA/ArchFile/: arch.txt
Assays/CFGs/Dilution/: Dilution_DAG1.dag
Assays/CFGs/Dilution/ArchFile/: arch.txt
Assays/CFGs/FentanylELISA/: FentanylELISA.cfg  FentanylELISA_DAG0.dag  FentanylELISA_DAG11.dag  FentanylELISA_DAG7.dag
Assays/CFGs/FentanylELISA/ArchFile/: arch.txt
Assays/CFGs/FullMorphineELISA/: FullMorphineELISA.cfg  FullMorphineELISA_DAG1.dag  FullMorphineELISA_DAG18.dag  FullMorphineELISA_DAG28.dag
Assays/CFGs/FullMorphineELISA/ArchFile/: arch.txt
Assays/CFGs/GlucoseDetection/: GlucoseDetection.cfg  GlucoseDetection_DAG0.dag  GlucoseDetection_DAG1.dag  GlucoseDetection_DAG12.dag
Assays/CFGs/GlucoseDetection/ArchFile/: arch.txt
Assays/CFGs/HeroinELISA/: HeroinELISA.cfg  HeroinELISA_DAG0.dag  HeroinELISA_DAG11.dag  HeroinELISA_DAG7.dag
Assays/CFGs/ImageProbeSynth/: ImageProbeSynth.cfg  ImageProbeSynth_DAG1.dag
Assays/CFGs/ImageProbeSynth/ArchFile/: arch.txt
Assays/CFGs/MorphineELISA/: MorphineELISA.cfg  MorphineELISA_DAG0.dag  MorphineELISA_DAG11.dag  MorphineELISA_DAG7.dag
Assays/CFGs/OpiateDetectionCGO/: OpiateDetectionCGO.cfg  OpiateDetectionCGO_DAG0.dag  OpiateDetectionCGO_DAG1.dag  OpiateDetectionCGO_DAG10.dag  OpiateDetectionCGO_DAG11.dag  OpiateDetectionCGO_DAG12.dag  OpiateDetectionCGO_DAG13.dag  OpiateDetectionCGO_DAG14.dag  OpiateDetectionCGO_DAG15.dag  OpiateDetectionCGO_DAG16.dag  OpiateDetectionCGO_DAG2.dag  OpiateDetectionCGO_DAG3.dag  OpiateDetectionCGO_DAG4.dag  OpiateDetectionCGO_DAG5.dag  OpiateDetectionCGO_DAG7.dag  OpiateDetectionCGO_DAG8.dag  OpiateDetectionCGO_DAG9.dag  originalOpiateDetectionCGO.cfg
Assays/CFGs/OpiateDetectionCGO/ArchFile/: arch.txt
Assays/CFGs/OxycodoneELISA/: OxycodoneELISA.cfg  OxycodoneELISA_DAG0.dag  OxycodoneELISA_DAG11.dag  OxycodoneELISA_DAG6.dag
Assays/CFGs/PCR/: PCR.cfg  PCR_DAG1.dag  PCR_DAG5.dag  PCR_DAG8.dag
Assays/CFGs/PCR/ArchFile/: arch.txt
Assays/CFGs/PCRDropletReplacement/: PCRDropletReplacement.cfg  PCRDropletReplacement_DAG0.dag  PCRDropletReplacement_DAG10.dag  PCRDropletReplacement_DAG13.dag  PCRDropletReplacement_DAG3.dag  PCRDropletReplacement_DAG6.dag
Assays/CFGs/PCRDropletReplacement/ArchFile/: arch.txt
Assays/CFGs/ProbabilisticPCR/: ProbabilisticPCR.cfg  ProbabilisticPCR_DAG0.dag  ProbabilisticPCR_DAG13.dag  ProbabilisticPCR_DAG16.dag  ProbabilisticPCR_DAG4.dag  ProbabilisticPCR_DAG7.dag  ProbabilisticPCR_DAG9.dag
Assays/CFGs/ProbabilisticPCR/ArchFile/: arch.txt
Headers/: compatibility_check.h  synthesis.h
Headers/Models/: assay_node.h  cfg.h  compiled_cfg.h  compiled_dag.h  conditional_group.h  dag.h  diagonal_wire_routing_model.h  dmfb_arch.h  droplet.h  entity.h  expression.h  fixed_module.h  io_port.h  min_cost_max_flow_graph.h  op_module.h  operation_coalescing_pool.h  reconfig_module.h
Headers/PinMapper/: indiv_addr_pin_mapper.h  pin_mapper.h
Headers/Placer/: cs220_placer.h  grissom_left_edge_binder.h  placer.h
Headers/Resources/: enums.h  structs.h
Headers/Router/: cs220_router.h  post_subprob_compact_router.h  router.h  roy_maze_router.h
Headers/Scheduler/: cs220_scheduler.h  list_scheduler.h  priority.h  scheduler.h
Headers/Testing/: claim.h  elapsed_timer.h
Headers/Util/: analyze.h  command_line.h  compatibility_check.h  file_in.h  file_out.h  sort.h  synthesis.h  util.h
Headers/WireRouter/: path_finder_wire_router.h  paths.h  wire_router.h  wire_segment.h
Source/: command_line.cc  compatibility_check.cc  main.cc  synthesis.cc
Source/Models/: assay_node.cc  cfg.cc  compiled_cfg.cc  compiled_dag.cc  conditional_group.cc  dag.cc  diagonal_wire_routing_model.cc  dmfb_arch.cc  droplet.cc  entity.cc  expression.cc  fixed_module.cc  io_port.cc  min_cost_max_flow_graph.cc  op_module.cc  operation_coalescing_pool.cc  reconfig_module.cc
Source/PinMapper/: indiv_addr_pin_mapper.cc  pin_mapper.cc
Source/Placer/: cs220_placer.cc  grissom_left_edge_binder.cc  placer.cc
Source/Router/: cs220_router.cc  post_subprob_compact_router.cc  router.cc  roy_maze_router.cc
Source/Scheduler/: cs220_scheduler.cc  list_scheduler.cc  priority.cc  scheduler.cc
Source/Testing/: claim.cc  elapsed_timer.cc
Source/Util/: analyze.cc  claim.cc  command_line.cc  compatibility_check.cc  elapsed_timer.cc  file_in.cc  file_out.cc  sort.cc  synthesis.cc  util.cc
Source/WireRouter/: path_finder_wire_router.cc  paths.cc  wire_router.cc  wire_segment.cc
